# nbnbot

./: .env.example  Dockerfile  PHASE1_COMPLETION_SUMMARY.md  WHATSAPP_DEPLOYMENT.md  docker-compose.yml  requirements.txt  test_whatsapp_integration.py
app/: .env.example  Dockerfile  __init__.py  agent.py  config.py  lookup_api.py  main.py  pyproject.toml  redis_conversation.py  todoist_client.py  twilio_handler.py  whatsapp_handler.py
baileys/: Dockerfile  index.js  package.json  smoke.js
bot/: __init__.py  analytics.py  handlers.py  main.py  nbn_service.py
docs/superpowers/plans/: 2026-05-01-whatsapp-nbn-baileys-implementation-plan.md
docs/superpowers/specs/: 2026-05-01-whatsapp-nbn-baileys-design.md
gmaps/: __init__.py  geocoder.py
iperium/: __init__.py  client.py
tests/: INTEGRATION_TESTS.md  test_bot_handlers.py  test_googlemaps.py  test_integration_e2e.py  test_iperium.py  test_lookup_api.py  test_nbn_service.py  test_todoist_client.py
